<resources>
    <string name="app_name">GameOnApp</string>
    <string name="server_address">http://gameon.enigmacondos.ca/api/</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="userid">User Id</string>
    <string name="userpassword">Password</string>
    <string name="register">Register</string>
    <string name="username">Name</string>
    <string name="email">Email</string>
    <string name="userphone">Phone</string>
    <string name="tProfile">Profile</string>
    <string name="tCategory">Categories</string>
    <string name="tLogout">Logout</string>
    <string name="update">Update Info</string>
    <string name="tCart">View Cart</string>
    <string name="checkout">Check out</string>
</resources>
